add support multi db connect at once

--- a/example/config/app-dev.yml
+++ b/example/config/app-dev.yml
@@ -2,6 +2,27 @@ server:
   host: localhost
   port: 8085
 
+databases:
+  - host: localhost
+    port: 3306
+    username: portal
+    password: 4f242f2491e53c8e72f14c373f3dd19d
+    dbname: PORTAL
+    dbtype: mysql
+    maxIdleConns: 10
+    maxOpenConns: 1000
+    connMaxLifetime: 1h
+
+  - host: localhost
+    port: 3306
+    username: portal
+    password: 4f242f2491e53c8e72f14c373f3dd19d
+    dbname: PORTAL
+    dbtype: mysql
+    maxIdleConns: 10
+    maxOpenConns: 1000
+    connMaxLifetime: 1h
+
 database:
   host: localhost
   port: 3306
